--- a/styles/helper.scss
+++ b/styles/helper.scss
@@ -108,6 +108,19 @@
 .text-center {
   text-align: center;
 }
+.text-right {
+  text-align: right;
+}
+
+// border
+
+.bord-1 {
+  border: 1px solid gray;
+}
+.bord-rad-1 {
+  border: 1px solid #000;
+  border-radius: 25px;
+}
 //flex
 .flex {
   display: flex;
@@ -218,4 +231,68 @@
 }
 .ml-5 {
   margin-left: 50px;
+}
+
+
+// padding
+
+.pb-1 {
+  padding-bottom: 10px;
+}
+.pb-2 {
+  padding-bottom: 20px;
+}
+.pb-3 {
+  padding-bottom: 30px;
+}
+.pb-4 {
+  padding-bottom: 40px;
+}
+.pb-5 {
+  padding-bottom: 50px;
+}
+.pt-1 {
+  padding-top: 10px;
+}
+.pt-2 {
+  padding-top: 20px;
+}
+.pt-3 {
+  padding-top: 30px;
+}
+.pt-4 {
+  padding-top: 40px;
+}
+.pt-5 {
+  padding-top: 50px;
+}
+.pr-1 {
+  padding-right: 10px;
+}
+.pr-2 {
+  padding-right: 20px;
+}
+.pr-3 {
+  padding-right: 30px;
+}
+.pr-4 {
+  padding-right: 40px;
+}
+.pr-5 {
+  padding-right: 50px;
+}
+.pl-1 {
+  padding-left: 10px;
+}
+.pl-2 {
+  padding-left: 20px;
+}
+.pl-3 {
+  padding-left: 30px;
+}
+.pl-4 {
+  padding-left: 40px;
+}
+.pl-5 {
+  padding-left: 50px;
 }
