added charts and modals

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -7,3 +7,5 @@
 @import "./accordion.scss";
 @import "./footer.scss";
 @import "./dashboard.scss";
+@import "./modal.scss";
+@import "./yieldmodal.scss";
