--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -65,7 +65,7 @@
           // }
           &:hover {
             color: #222222;
-            background-color: #f3f3f3;
+            background-color: #f3f9f9;
             &::after {
               width: 100%;
             }
@@ -73,6 +73,14 @@
         }
 
         .active {
+          padding: 15px 40px;
+          // margin: 0 20px;
+          border-radius: 100px;
+          font-size: 14px;
+          text-transform: uppercase;
+          position: relative;
+          transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+          width: fit-content;
           color: #222222;
           background-color: #f3f3f3;
           &::after {
@@ -89,6 +97,9 @@
     .btn {
       border-radius: 100px;
       width: 100px;
+    }
+    .modal-btn {
+      cursor: pointer;
     }
   }
 }
