--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -83,19 +83,28 @@
         border-bottom: 1px solid;
       }
 
-      th,
+      th {
+        padding: 13px 50px 13px 0px;
+      }
       td {
-        padding: 13px 60px 13px 0px;
-        // border: 1px solid;
+        padding: 5px 0px;
+      }
+
+      tbody tr:nth-child(2) {
+        border-bottom: 1px solid #cec;
       }
 
       tbody tr {
-        border-bottom: 1px solid #cec;
+        // border-bottom: 1px solid #cec;
 
         td:nth-child(4) {
           color: rgb(8, 245, 8);
         }
       }
+
+      // tbody tr:nth-child(n)  {
+      //   border-bottom: none;
+      // }
     }
   }
   .yield-content {
@@ -116,13 +125,19 @@
         border-bottom: 1px solid;
       }
 
-      th,
+      th {
+        padding: 10px 10px 10px 0px;
+      }
       td {
-        padding: 13px 15px 13px 0px;
+        padding: 5px 10px 5px 0px;
+      }
+
+      tbody tr tr:nth-child(2) {
+        border-bottom: 1px solid #cec;
       }
 
       tbody tr {
-        border-bottom: 1px solid #cec;
+        // border-bottom: 1px solid #cec;
 
         td:nth-child(6) {
           color: rgb(8, 245, 8);
