--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -171,6 +171,13 @@
         td:nth-child(6) {
           color: rgb(8, 245, 8);
         }
+        // td:nth-child(7) {
+        //   text-align: center;
+        // }
+
+        .table_data {
+          text-align: center;
+        }
       }
     }
   }
