--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -45,7 +45,7 @@
 
         .nav-link {
           padding: 15px 40px;
-          // margin: 0 20px;
+          margin: 0 20px;
           border-radius: 100px;
           font-size: 14px;
           text-transform: uppercase;
