--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -102,84 +102,14 @@
     box-sizing: border-box;
     border-radius: 10px;
     padding: 36px 24px;
-
-    .styled-table {
-      margin-top: 20px;
-      border-collapse: collapse;
-
-      thead tr {
-        text-align: left;
-        color: gray;
-        border-bottom: 1px solid;
-      }
-
-      th {
-        padding: 13px 50px 13px 0px;
-      }
-      td {
-        padding: 5px 0px;
-      }
-
-      tbody tr:nth-child(2) {
-        border-bottom: 1px solid #cec;
-      }
-
-      tbody tr {
-        // border-bottom: 1px solid #cec;
-
-        td:nth-child(4) {
-          color: rgb(8, 245, 8);
-        }
-      }
-
-      // tbody tr:nth-child(n)  {
-      //   border-bottom: none;
-      // }
-    }
   }
+
   .yield-content {
     background-color: white;
     border: 1.5px solid rgba(196, 196, 196, 0.51);
     box-sizing: border-box;
     border-radius: 10px;
     padding: 36px 24px;
-
-    .styled-table {
-      border-collapse: collapse;
-      margin-top: 20px;
-
-      thead tr {
-        text-align: left;
-        color: gray;
-        border-bottom: 1px solid;
-      }
-
-      th {
-        padding: 10px 10px 10px 0px;
-      }
-      td {
-        padding: 5px 10px 5px 0px;
-      }
-
-      tbody tr tr:nth-child(2) {
-        border-bottom: 1px solid #cec;
-      }
-
-      tbody tr {
-        // border-bottom: 1px solid #cec;
-
-        td:nth-child(6) {
-          color: rgb(8, 245, 8);
-        }
-        // td:nth-child(7) {
-        //   text-align: center;
-        // }
-
-        .table_data {
-          text-align: center;
-        }
-      }
-    }
   }
   .pool_stats_container {
     background-color: white;
@@ -224,15 +154,17 @@
     th {
       margin: 0 10px;
       padding: 0.5rem 0;
-      padding-right: 5rem;
-      border-bottom: 1px solid #000;
+      padding-right: 5.1rem;
+      border-bottom: 2px solid #c4c4c4;
       text-align: left;
+      color: #c4c4c4;
     }
+
     td {
       margin: 0 10px;
       padding: 0.5rem 0;
-      padding-right: 4rem;
-      border-bottom: 1px solid #cec;
+      padding-right: 5.1rem;
+      border-bottom: 1px solid #c4c4c4;
 
       :last-child {
         border-right: 0;
@@ -275,14 +207,15 @@
       margin: 0;
       padding: 0.5rem 0;
       padding-right: 1rem;
-      border-bottom: 1px solid #000;
+      border-bottom: 2px solid #c4c4c4;
       text-align: left;
+      color: #c4c4c4;
     }
     td {
       margin: 0;
       padding: 0.5rem 0;
       padding-right: 1.5rem;
-      border-bottom: 1px solid #cec;
+      border-bottom: 1px solid #c4c4c4;
 
       :last-child {
         border-right: 0;
