--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -23,7 +23,7 @@
     }
 
     .recommend_box {
-        text-align: center;
+      text-align: center;
     }
   }
 
@@ -58,6 +58,10 @@
 
     .content-tabs {
       flex-grow: 1;
+
+      .labels {
+        cursor: pointer;
+      }
 
       .content {
         background-color: #fff;
@@ -105,7 +109,6 @@
     }
   }
 }
-
 
 .lockup-period-label {
   background-color: #cec;
