--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -94,8 +94,8 @@
           background-color: rgba(22, 245, 40, 0.23);
           border-radius: 8px;
 
-          .estimate_icon {
-          }
+          // .estimate_icon {
+          // }
 
           .estimate {
             text-align: left;
