--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -3,6 +3,7 @@
 
   padding-left: 15%;
   padding-right: 15%;
+
   .description {
     display: flex;
     justify-content: space-between;
@@ -56,7 +57,7 @@
       p {
         padding: 10px 0;
         span {
-          color: rgb(8, 245, 8);
+          color: #08f508;
         }
       }
     }
@@ -70,6 +71,10 @@
         height: 100%;
         display: flex;
         align-items: center;
+        overflow: hidden;
+        canvas {
+          transform: translateX(-5%);
+        }
       }
     }
   }
