--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -7,18 +7,22 @@
   top: 0;
   bottom: 0;
   z-index: 1001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   .modal-cont {
     width: 40%;
+    max-width: 480px;
     border: 1px solid transparent;
-    position: relative;
-    top: 5%;
-    left: 30%;
+    // position: relative;
+    // top: 5%;
+    // left: 30%;
 
     .close-icon {
       position: absolute;
-      right: 0;
-      top: 3px;
+      right: 25%;
+      top: 8%;
       cursor: pointer;
     }
 
@@ -33,26 +37,26 @@
     box-sizing: border-box;
     border-radius: 10px;
     padding: 36px 10px;
-    width: 90%;
+    width: 100%;
     min-height: 450px;
-    margin-top: 35px;
+
     // height: 30%;
 
     .modal-tabs {
       display: flex;
       width: 100%;
+      justify-content: space-between;
 
       .tabs {
         background-color: #fff;
         cursor: pointer;
-        width: 42%;
-        margin-left: 15px;
-        border-bottom: 5px solid #cec;
+        width: 48%;
+        height: 4px;
+        background-color: #d0d0d0;
       }
 
       .active-tabs {
-        background-color: #fff;
-        border-bottom: 5px solid green;
+        background-color: #06aa65;
       }
     }
 
@@ -73,14 +77,24 @@
         .modal_input {
           height: 60px;
           border-radius: 30px;
-
+          border: 1.5px solid #c4c4c4;
+          overflow: hidden;
           input {
-            font-size: 1.4rem;
-            font-weight: bold;
+            font-size: 18px;
             border: none;
             outline: none;
             width: 90%;
             padding: 5px 0;
+            &::-webkit-outer-spin-button,
+            &::-webkit-inner-spin-button {
+              -webkit-appearance: none;
+              margin: 0;
+            }
+
+            /* Firefox */
+            input[type="number"] {
+              -moz-appearance: textfield;
+            }
           }
         }
 
@@ -90,8 +104,8 @@
         }
 
         .estimate_label {
-          border: 2px solid green;
-          background-color: rgba(22, 245, 40, 0.23);
+          border: 1.5px solid $primary;
+          background-color: #ebfff6;
           border-radius: 8px;
 
           // .estimate_icon {
@@ -126,24 +140,26 @@
 }
 
 .navbar_modal_container {
-  width: 150px;
-  padding: 15px;
-  background-color: white;
-  border: 1.5px solid rgba(196, 196, 196, 0.51);
+  width: 180px;
+  padding: 20px 30px;
   box-sizing: border-box;
   position: absolute;
-  top: 75px;
-  right: 100px;
+  top: 90px;
+  right: 7%;
+  background: #ffffff;
+  box-shadow: 0px 4px 20px rgba(34, 34, 34, 0.08);
+  border-radius: 8px;
 
   .nav-modal-label {
     display: flex;
     justify-content: space-between;
-    color: #d9dddc;
+    color: #808080;
     cursor: pointer;
-    padding: 5px 0;
+    padding: 10px 0;
+    font-size: 18px;
 
     &:hover {
-      color: #000;
+      color: #222222;
     }
   }
 }
