--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -40,8 +40,21 @@
     width: 100%;
     min-height: 450px;
 
-    // height: 30%;
+    .return_tab {
+      display: flex;
+      width: 130px;
+      margin-bottom: 20px;
+      padding: 5px 10px;
+      justify-content: space-around;
+      align-items: center;
+      cursor: pointer;
+      border-radius: 15px;
 
+      &:hover {
+        border: 1px solid #06aa65;
+        background-color: #eff8f5;
+      }
+    }
     .modal-tabs {
       display: flex;
       width: 100%;
@@ -49,10 +62,11 @@
 
       .tabs {
         background-color: #fff;
-        cursor: pointer;
-        width: 48%;
+        // cursor: pointer;
+        width: 40%;
         height: 4px;
         background-color: #d0d0d0;
+        margin: 0 6px;
       }
 
       .active-tabs {
