--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -107,6 +107,58 @@
     box-sizing: border-box;
     border-radius: 10px;
     padding: 36px 24px;
+
+    .MuiToolbar-root, 
+    .MuiToolbar-regular, 
+    .MTableToolbar-root-5, 
+    .MuiToolbar-gutters {
+      width: 100%;
+      justify-content: space-between;
+      padding-left: 0;
+      padding-right: 0;
+
+        .MuiTextField-root {
+          width: 75%;
+
+          .MuiSvgIcon-fontSizeSmall {
+            width: 35px;
+            height: 35px;
+          }
+ 
+          .MuiInputAdornment-positionEnd {
+            display: none;
+          }
+        }
+
+        .MTableToolbar-spacer-7 {
+
+        }
+
+        .MTableToolbar-actions-8 {
+          width: 23%;
+  
+          .MuiIconButton-colorInherit {
+            width: 100%;
+            height: 55px;
+            background-color: #eaeaea;
+            border-radius: 40px;
+      
+            &:hover {
+              background-color: darken($color: #eaeaea, $amount: 20);
+            }
+      
+            .MuiIconButton-label:after {
+              content: "Export";
+              margin-left: 5px;
+              font-size: 17px;
+              font-weight: 700;
+            }
+    
+          }
+        }
+      
+    }
+    
   }
 
   .yield-content {
@@ -115,6 +167,57 @@
     box-sizing: border-box;
     border-radius: 10px;
     padding: 36px 24px;
+
+    .MuiToolbar-root, 
+    .MuiToolbar-regular, 
+    .MTableToolbar-root-5, 
+    .MuiToolbar-gutters {
+      width: 100%;
+      justify-content: space-between;
+      padding-left: 0;
+      padding-right: 0;
+
+        .MuiTextField-root {
+          width: 75%;
+
+          .MuiSvgIcon-fontSizeSmall {
+            width: 35px;
+            height: 35px;
+          }
+ 
+          .MuiInputAdornment-positionEnd {
+            display: none;
+          }
+        }
+
+        .MTableToolbar-spacer-7 {
+
+        }
+
+        .MTableToolbar-actions-8 {
+          width: 23%;
+  
+          .MuiIconButton-colorInherit {
+            width: 100%;
+            height: 55px;
+            background-color: #eaeaea;
+            border-radius: 40px;
+      
+            &:hover {
+              background-color: darken($color: #eaeaea, $amount: 20);
+            }
+      
+            .MuiIconButton-label:after {
+              content: "Export";
+              margin-left: 5px;
+              font-size: 17px;
+              font-weight: 700;
+            }
+    
+          }
+        }
+      
+    }
   }
   .pool_stats_container {
     background-color: white;
