--- a/styles/modal.scss
+++ b/styles/modal.scss
@@ -179,3 +179,33 @@
     }
   }
 }
+
+
+// select-wallet-styles
+
+.select_wallet_modal_overlay {
+  // background-color: rgba(196, 196, 196, 0.51);
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1005;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .select_wallet_modal-container {
+    background-color: white;
+    border: 1.5px solid rgba(196, 196, 196, 0.51);
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 25px 18px;
+    // width: 100%;
+    // min-height: 450px;
+  }
+}
