--- a/styles/helper.scss
+++ b/styles/helper.scss
@@ -95,8 +95,9 @@
   letter-spacing: -0.05em;
 }
 .heading-smaller {
-  font-size: 24px;
+  font-size: 29px;
   line-height: 29px;
+  font-weight: 600;
 }
 .font-large {
   font-size: 24px;
