--- a/styles/dashboard.scss
+++ b/styles/dashboard.scss
@@ -108,57 +108,53 @@
     border-radius: 10px;
     padding: 36px 24px;
 
-    .MuiToolbar-root, 
-    .MuiToolbar-regular, 
-    .MTableToolbar-root-5, 
+    .MuiToolbar-root,
+    .MuiToolbar-regular,
+    .MTableToolbar-root-5,
     .MuiToolbar-gutters {
       width: 100%;
       justify-content: space-between;
       padding-left: 0;
       padding-right: 0;
 
-        .MuiTextField-root {
-          width: 75%;
+      .MuiTextField-root {
+        width: 75%;
 
-          .MuiSvgIcon-fontSizeSmall {
-            width: 35px;
-            height: 35px;
-          }
- 
-          .MuiInputAdornment-positionEnd {
-            display: none;
-          }
+        .MuiSvgIcon-fontSizeSmall {
+          width: 35px;
+          height: 35px;
         }
 
-        .MTableToolbar-spacer-7 {
-
+        .MuiInputAdornment-positionEnd {
+          display: none;
         }
+      }
 
-        .MTableToolbar-actions-8 {
-          width: 23%;
-  
-          .MuiIconButton-colorInherit {
-            width: 100%;
-            height: 55px;
-            background-color: #eaeaea;
-            border-radius: 40px;
-      
-            &:hover {
-              background-color: darken($color: #eaeaea, $amount: 20);
-            }
-      
-            .MuiIconButton-label:after {
-              content: "Export";
-              margin-left: 5px;
-              font-size: 17px;
-              font-weight: 700;
-            }
-    
+      .MTableToolbar-spacer-7 {
+      }
+
+      .MTableToolbar-actions-8 {
+        width: 23% !important;
+
+        .MuiIconButton-colorInherit {
+          width: 100% !important;
+          height: 55px !important;
+          background-color: #eaeaea !important;
+          border-radius: 40px;
+
+          &:hover {
+            background-color: darken($color: #eaeaea, $amount: 20) !important;
+          }
+
+          .MuiIconButton-label:after {
+            content: "Export";
+            margin-left: 5px;
+            font-size: 17px;
+            font-weight: 700;
           }
         }
-      
+      }
     }
-    
   }
 
   .yield-content {
@@ -168,55 +164,52 @@
     border-radius: 10px;
     padding: 36px 24px;
 
-    .MuiToolbar-root, 
-    .MuiToolbar-regular, 
-    .MTableToolbar-root-5, 
+    .MuiToolbar-root,
+    .MuiToolbar-regular,
+    .MTableToolbar-root-5,
     .MuiToolbar-gutters {
       width: 100%;
       justify-content: space-between;
       padding-left: 0;
       padding-right: 0;
 
-        .MuiTextField-root {
-          width: 75%;
+      .MuiTextField-root {
+        width: 75%;
 
-          .MuiSvgIcon-fontSizeSmall {
-            width: 35px;
-            height: 35px;
-          }
- 
-          .MuiInputAdornment-positionEnd {
-            display: none;
-          }
+        .MuiSvgIcon-fontSizeSmall {
+          width: 35px;
+          height: 35px;
         }
 
-        .MTableToolbar-spacer-7 {
-
+        .MuiInputAdornment-positionEnd {
+          display: none;
         }
+      }
 
-        .MTableToolbar-actions-8 {
-          width: 23%;
-  
-          .MuiIconButton-colorInherit {
-            width: 100%;
-            height: 55px;
-            background-color: #eaeaea;
-            border-radius: 40px;
-      
-            &:hover {
-              background-color: darken($color: #eaeaea, $amount: 20);
-            }
-      
-            .MuiIconButton-label:after {
-              content: "Export";
-              margin-left: 5px;
-              font-size: 17px;
-              font-weight: 700;
-            }
-    
+      .MTableToolbar-spacer-7 {
+      }
+
+      .MTableToolbar-actions-8 {
+        width: 23%;
+
+        .MuiIconButton-colorInherit {
+          width: 100%;
+          height: 55px;
+          background-color: #eaeaea;
+          border-radius: 40px;
+
+          &:hover {
+            background-color: darken($color: #eaeaea, $amount: 20);
+          }
+
+          .MuiIconButton-label:after {
+            content: "Export";
+            margin-left: 5px;
+            font-size: 17px;
+            font-weight: 700;
           }
         }
-      
+      }
     }
   }
   .pool_stats_container {
